[gd_scene load_steps=7 format=3 uid="uid://cfuf0wu1q6irj"]

[ext_resource type="Script" path="res://game_objects/sfx/sfx.gd" id="1_pmups"]
[ext_resource type="AudioStream" uid="uid://b88u430nhkax5" path="res://assets/sfx/click/Monstruo_SFX_click.wav" id="2_pyp2v"]
[ext_resource type="AudioStream" uid="uid://bv8jy735404g0" path="res://assets/sfx/succeed/Monstruo_SFX_succeed.wav" id="3_sysml"]
[ext_resource type="AudioStream" uid="uid://blai7vyijed1u" path="res://assets/sfx/paste/Monstruo_SFX_paste.wav" id="4_7umrl"]
[ext_resource type="AudioStream" uid="uid://cm56hh88qpi2a" path="res://assets/sfx/paste/Monstruo_SFX_paste_V1.wav" id="5_5e0h1"]
[ext_resource type="AudioStream" uid="uid://b0075vkmdedx3" path="res://assets/sfx/paste/Monstruo_SFX_paste_V2.wav" id="6_6t64x"]

[node name="SFX" type="Node"]
script = ExtResource("1_pmups")

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pyp2v")
volume_db = -10.0

[node name="SucceedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_sysml")

[node name="PasteSound" type="Node" parent="."]

[node name="Sound_1" type="AudioStreamPlayer" parent="PasteSound"]
stream = ExtResource("4_7umrl")

[node name="Sound_2" type="AudioStreamPlayer" parent="PasteSound"]
stream = ExtResource("5_5e0h1")

[node name="Sound_3" type="AudioStreamPlayer" parent="PasteSound"]
stream = ExtResource("6_6t64x")
